fix: tooltip z-index 최상위로

--- a/src/component/Tooltip/index.scss
+++ b/src/component/Tooltip/index.scss
@@ -2,7 +2,7 @@
 
 .isolated-tooltip-box {
   position: fixed;
-  z-index: 500;
+  z-index: 2147483647;
   width: max-content;
   height: max-content;
   padding: 4px 8px;
